syntax = "proto3";

package cafm.identity.authz;

message AuthzAppService_isAllowedRequest {
  string token = 1;
  string action = 2;
  string permission_context = 3;
  string resource_id = 4;
}

message AuthzAppService_isAllowedResponse {
  bool isAllowed = 1;
}

service AuthzAppService {
  rpc isAllowed (AuthzAppService_isAllowedRequest) returns (AuthzAppService_isAllowedResponse) {}
}